--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -1301,7 +1301,7 @@ etric {SAR} data},
   author = {A. C. Frery and R. J. Cintra and Nascimento, A. D. C.},
   title = {Entropy-based Statistical Analysis of {PolSAR} Data},
   journal = {IEEE Transactions on Geoscience and Remote Sensing},
-  year = {in press},
+  year = {2013},
   volume = {51},
   number = {6},
   arxiv = {1210.4154},
@@ -3336,7 +3336,7 @@ etric {SAR} data},
 
 @INPROCEEDINGS{Quegan1994,
   author = {Quegan, S. and Rhodes, I. and Caves, R.},
-  title = {Statistical models for polarimetric{SAR}data},
+  title = {Statistical models for polarimetric {SAR} data},
   booktitle = {Geoscience and Remote Sensing Symposium, 1994. IGARSS '94. 'Surface
 	and Atmospheric Remote Sensing: Technologies, Data Analysis and Interpretation'.,
 	International},
@@ -4734,6 +4734,14 @@ etric {SAR} data},
   year = {1986},
   author = {Silverman, B. W.},
   edition = {First}
+}
+
+@BOOK{Casela2002,
+	title = {Statistical Inference},
+	publisher = {Duxbury Thomson Learning},
+	year = {2002},
+	author = {Casela, G. and Berger, R.},
+	edition = {Second}
 }
 
 @BOOK{Scott1992,
