--- a/Source/CorreccionTesis/ApendiceA1.tex
+++ b/Source/CorreccionTesis/ApendiceA1.tex
@@ -18,7 +18,7 @@
 	Si $n^{-1}b^{-1} \to 0$ cuando $n \to +\infty$ entonces $\dfrac{b}{n}$ y $\dfrac{b^3}{n}$ son $o(n^{-1}b^{-1})$.
 	Luego
 	\begin{align}
-	\label{MISE}
+	\label{MISE:apendice}
 	MISE(\widehat{f}_n)=&\dfrac{1}{2 n b \sqrt{\pi}} \int_{0}^{+\infty}\frac{f(x)}{x}+\frac{b^4}{4} \int_{0}^{+\infty} x^2\left(3f'(x)+xf''(x)\right)^2+o\left(b^4+n^{-1}b^{-1}\right).
 	\end{align}
 	
