--- a/Source/CorreccionTesis/capitulo3.tex
+++ b/Source/CorreccionTesis/capitulo3.tex
@@ -217,7 +217,7 @@ Las ondas electromagnéticas son ondas transversales, es decir, la dirección de
 \begin{figure}[hbt]
 	\centering    
 	\subfigure[Polarización Circular\label{PolarizacionCircular}]{\includegraphics[scale=1]{../../Figures/Tesis/Capitulo3/PolarizacionCircular.pdf}} \qquad
-	\subfigure[Polarización Lineal\label{PolarizacionCircular}]{\includegraphics[scale=1]{../../Figures/Tesis/Capitulo3/PolarizacionLineal.pdf}}
+	\subfigure[Polarización Lineal\label{PolarizacionLineal}]{\includegraphics[scale=1]{../../Figures/Tesis/Capitulo3/PolarizacionLineal.pdf}}
 	\caption{\label{PolarizacionCircularLineal}Diferentes tipos de polarizaciones.}
 \end{figure} 
 
@@ -376,9 +376,9 @@ Supongamos que iluminamos un área a través de un haz de energía electromagné
 \begin{align}
 S = \sum_{j=1}^{n} A_j \mathrm{e}^{\mathbf i \phi_j} = 
 \underbrace{{\sum_{j=1}^{n} A_j \cos \phi_j}}_{\Re{S}} +\mathbf i \underbrace{ \sum_{j=1}^{n} A_j \sin \phi_j}_{\Im{S}}, 
-\label{RetornoComplejo}
+\label{eq:RetornoComplejo}
 \end{align}
-donde $i$ es la unidad imaginaria y $A_j \mathrm{e}^{\mathbf i \phi_j}$ representa el retorno del $j$-ésimo dispersor. La ecuación~\eqref{RetornoComplejo} describe la suma coherente de las contribuciones del retorno total de cada uno de los dispersores. En general, en vez de tratar directamente con el retorno complejo se trabajan con los datos dados en formato amplitud $A=\mid S \mid$ o  en formato intensidad $I=\mid S \mid^2$, donde $I=A^2$ En esta tesis se trabajará con este último formato.
+donde $i$ es la unidad imaginaria y $A_j \mathrm{e}^{\mathbf i \phi_j}$ representa el retorno del $j$-ésimo dispersor. La ecuación~\eqref{eq:RetornoComplejo} describe la suma coherente de las contribuciones del retorno total de cada uno de los dispersores. En general, en vez de tratar directamente con el retorno complejo se trabajan con los datos dados en formato amplitud $A=\mid S \mid$ o  en formato intensidad $I=\mid S \mid^2$, donde $I=A^2$ En esta tesis se trabajará con este último formato.
 
 De acuerdo a~\citet{Quegan1994} si no hay un retrodispersor que domine, la forma de extraer información del retorno de los retrodispersores es aproximándose al problema desde un punto de vista estadístico. Este enfoque se verá en el capítulo~\ref{modeloG0}.
 
