--- a/Source/CorreccionTesis/tesis.tex
+++ b/Source/CorreccionTesis/tesis.tex
@@ -48,7 +48,7 @@
 \usepackage{float}
 %\usepackage{dcolumn}
 
-\usepackage{natbib}
+%\usepackage{natbib}
 
 \usepackage{tikz}
 \usetikzlibrary{shapes,snakes,arrows,trees}
@@ -276,7 +276,7 @@
 %% y un ejemplo.
 %\bibliographystyle{agsm}
 \addcontentsline{toc}{chapter}{Bibliografí­a}
-\bibliographystyle{agsm}
+%\bibliographystyle{agsm}
 \bibliography{../../Bibliography/bib_julia}
 \label{bibliografia}
 
