--- a/Source/CorreccionTesis/capitulo6.tex
+++ b/Source/CorreccionTesis/capitulo6.tex
@@ -66,7 +66,7 @@ El primer objetivo de este trabajo fue elegir una distancia entre las posibles m
 	
 	\item Distancia de R\'enyi con parámetro $\beta\in(0,1)$
 	$$
-	d_\text{\tiny R}^{\beta}(f,g)=\frac{1}{2(\beta-1)}\log\displaystyle{\int_{S}\big({f^{\beta}g^{1-\beta})}+\log\displaystyle{\int_{S}\big(f^{1-\beta}g^{\beta}}}\big).
+	d_\text{\tiny R}^{\beta}(f,g)=\frac{1}{2(\beta-1)}\left[\log\displaystyle{\int_{S}\big({f^{\beta}g^{1-\beta})}+\log\displaystyle{\int_{S}\big(f^{1-\beta}g^{\beta}}}\big)\right].
 	$$
 \end{itemize}
 
@@ -79,7 +79,7 @@ Las figuras~\ref{DistL1},~\ref{DistL3} y~\ref{DistL8} muestran los gráficos de 
 	\subfigure[Hellinger]{\includegraphics[width=.45\linewidth]{../../Figures/Tesis/Capitulo6/GraficoDHL1_v2.pdf}}
 	\subfigure[Rényi]{\includegraphics[width=.45\linewidth]{../../Figures/Tesis/Capitulo6/GraficoDRL1_v2.pdf}}
 	\subfigure[Triangular]{\includegraphics[width=.45\linewidth]{../../Figures/Tesis/Capitulo6/GraficoDTL1_v2.pdf}}
-	\caption{\label{DistL1}\small Distancias Hellinger, Renyi y Triangular, $\alpha_0= -2,-3,-4,-5,-6,-7$ y $L=1$.}
+	\caption{\label{DistL1}\small Distancias Hellinger, Rényi y Triangular, $\alpha_0= -2,-3,-4,-5,-6,-7$ y $L=1$.}
 \end{figure}
 
 
@@ -88,7 +88,7 @@ Las figuras~\ref{DistL1},~\ref{DistL3} y~\ref{DistL8} muestran los gráficos de 
 	\subfigure[Hellinger]{\includegraphics[width=.42\linewidth]{../../Figures/Tesis/Capitulo6/GraficoDHL3_v2.pdf}}
 	\subfigure[Rényi]{\includegraphics[width=.42\linewidth]{../../Figures/Tesis/Capitulo6/GraficoDRL3_v2.pdf}}
 	\subfigure[Triangular]{\includegraphics[width=.42\linewidth]{../../Figures/Tesis/Capitulo6/GraficoDTL3_v2.pdf}}
-	\caption{\label{DistL3}\small Distancias Hellinger, Renyi y Triangular, $\alpha_0= -2,-3,-4,-5,-6,-7$ y $L=3$.}
+	\caption{\label{DistL3}\small Distancias Hellinger, Rényi y Triangular, $\alpha_0= -2,-3,-4,-5,-6,-7$ y $L=3$.}
 \end{figure}
 
 \begin{figure}[h!]
@@ -96,7 +96,7 @@ Las figuras~\ref{DistL1},~\ref{DistL3} y~\ref{DistL8} muestran los gráficos de 
 	\subfigure[Hellinger]{\includegraphics[width=.42\linewidth]{../../Figures/Tesis/Capitulo6/GraficoDHL8_v2.pdf}}
 	\subfigure[Rényi]{\includegraphics[width=.42\linewidth]{../../Figures/Tesis/Capitulo6/GraficoDRL8_v2.pdf}}
 	\subfigure[Triangular]{\includegraphics[width=.42\linewidth]{../../Figures/Tesis/Capitulo6/GraficoDTL8_v2.pdf}}
-	\caption{\label{DistL8}\small Distancias Hellinger, Renyi y Triangular, $\alpha_0= -2,-3,-4,-5,-6,-7$ y $L=8$.}
+	\caption{\label{DistL8}\small Distancias Hellinger, Rényi y Triangular, $\alpha_0= -2,-3,-4,-5,-6,-7$ y $L=8$.}
 \end{figure}
 
 En estos gráficos se puede observar que, cuanto menor es el valor de $\alpha_0$ la curva se hace más plana. Por este motivo los métodos de optimización resultan más inestables y el mínimo es más difícil de encontrar en forma precisa. Se puede observar también que, a medida que aumenta el valor de $L$, esta situación se revierte y es posible encontrar el mínimo de una forma más eficiente. Recordemos que el número de looks representa la relación señal ruido, por lo tanto, cuanto mayor es el número de looks menor ruido presenta la imagen siendo $L=1$ el caso de mayor ruido. Se puede observar también que la distancia de Hellinger es la que resulta más plana en un entorno del mínimo, y que las distancias de Rényi y Triangular tienen un comportamiento similar.
@@ -139,7 +139,7 @@ Cabe señalar que la minimización se realizó recorriendo un rango de valores d
 
 Se grafica también el intervalo que tiene como límites superior e inferior a los percentiles $(\eta/2) 100\%$ y $(1-\eta/2) 100\%$ de la distribución de $\widehat{\alpha}$ obtenida con las estimaciones en cada una de las muestas generadas. En este caso hemos utilizado $\eta=0.05$. Este método fue evaluado por~\citet{Buckland1983} en el caso donde la distribución subyacente es una exponencial que falla la simetría de la distribución. 
 
- Se puede observar que, en la mayoría de los casos estudiados, los estimadores del parámetro $\alpha$ utilizando distancia triangular y el método de Máxima Verosimilitud ($\widehat{\alpha}_{\text{\tiny{DT}}}$ y $\widehat{\alpha}_{\text{\tiny{MV}}}$ respectivamente) tienen un comportamiento similar en término de sesgo y ECM. Mientras que  el estimador utilizando las distancias de Hellinger y Renyi ($\widehat{\alpha}_{\text{\tiny{DH}}}$ y $\widehat{\alpha}_{\text{\tiny{DR}}}$ respectivamente) tienen una performance parecida. 
+ Se puede observar que, en la mayoría de los casos estudiados, los estimadores del parámetro $\alpha$ utilizando distancia triangular y el método de Máxima Verosimilitud ($\widehat{\alpha}_{\text{\tiny{DT}}}$ y $\widehat{\alpha}_{\text{\tiny{MV}}}$ respectivamente) tienen un comportamiento similar en término de sesgo y ECM. Mientras que  el estimador utilizando las distancias de Hellinger y Rényi ($\widehat{\alpha}_{\text{\tiny{DH}}}$ y $\widehat{\alpha}_{\text{\tiny{DR}}}$ respectivamente) tienen una performance parecida. 
  
  En el gráfico de $L=1$ se observa que las distancias de Hellinger y Rényi muestran mayor ECM para tamaños de muestra mayores que $9$, salvo para zonas homogéneas donde el ECM es similar en todas las distancias estudiadas. Asimismo estas distancias muestran un mayor sesgo para muestras grandes.
 
@@ -201,7 +201,7 @@ Por lo anteriormente expuesto, especialmente por el resulado de las simulaciones
 \section{Incorporando núcleos y evaluando robustez}
 \label{jstar}
 
-Como se mencionó en la sección~\ref{EligiendoDistancias}, en~\citet{APSAR2013ParameterEstimationStochasticDistances} se compararon estimadores basados en la distancia de Hellinger, Bhattacharyya, Renyi y Triangular con el MV estimador. Se mostró que la distancia Triangular es la mejor opción para definir el MDE estimador. En ese trabajo se utilizaron histogramas para estimar la función de densidad subyacente. En~\citet{gambini2015} %articulo que publicamos en la revista \textit{IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing} 
+Como se mencionó en la sección~\ref{EligiendoDistancias}, en~\citet{APSAR2013ParameterEstimationStochasticDistances} se compararon estimadores basados en la distancia de Hellinger, Bhattacharyya, Rényi y Triangular con el MV estimador. Se mostró que la distancia Triangular es la mejor opción para definir el MDE estimador. En ese trabajo se utilizaron histogramas para estimar la función de densidad subyacente. En~\citet{gambini2015} %articulo que publicamos en la revista \textit{IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing} 
 presentamos mejoras con respecto a los resultados obtenidos en~\citet{APSAR2013ParameterEstimationStochasticDistances} ya que: 
 \begin{itemize}
 	\item Se evaluó el impacto de la contaminación en la estimación de $\alpha$.
@@ -964,25 +964,25 @@ Las figuras~\ref{InflL3alfa-1.5n25},~\ref{InflL3alfa-3n25}~\ref{InflL3alfa-5n25}
 \begin{figure}[htb]
 	\subfigure[\label{InflL3alfa-1.5n25}$\widehat{\alpha}=-1.5$]{\includegraphics[width=.50\linewidth]{../../Figures/Tesis/Capitulo6/CurvaInfluenciaAlfa_1punto5L3n25.pdf}}
 	\subfigure[\label{InflL3alfa-3n25}$\widehat{\alpha}=-3$]{\includegraphics[width=.50\linewidth]{../../Figures/Tesis/Capitulo6/CurvaInfluenciaAlfa_3L3n25.pdf}}
-	\caption{\label{InflL3n25}\small FIES para $\widehat{\alpha}_{\text{\tiny{MV}}}$, $\widehat{\alpha}_{\Gamma}$, $\widehat{\alpha}_{\text{\tiny{LN}}}$, $\widehat{\alpha}_{\text\tiny{{LC}}}$ para $L=3$, $n=25$ y $\alpha=-1.5,-3$.}
+	\caption{\label{InflL3n25:-1.5y-3}\small FIES para $\widehat{\alpha}_{\text{\tiny{MV}}}$, $\widehat{\alpha}_{\Gamma}$, $\widehat{\alpha}_{\text{\tiny{LN}}}$, $\widehat{\alpha}_{\text\tiny{{LC}}}$ para $L=3$, $n=25$ y $\alpha=-1.5,-3$.}
 \end{figure}
 
 \begin{figure}[htb]
 	\subfigure[\label{InflL3alfa-5n25}$\widehat{\alpha}=-5$]{\includegraphics[width=.50\linewidth]{../../Figures/Tesis/Capitulo6/CurvaInfluenciaAlfa_5L3n25.pdf}}
 	\subfigure[\label{InflL3alfa-8n25}$\widehat{\alpha}=-8$]{\includegraphics[width=.50\linewidth]{../../Figures/Tesis/Capitulo6/CurvaInfluenciaAlfa_8L3n25.pdf}}
-	\caption{\label{InflL3n25}\small FIES para $\widehat{\alpha}_{\text{\tiny{MV}}}$, $\widehat{\alpha}_{\Gamma}$, $\widehat{\alpha}_{\text{\tiny{LN}}}$, $\widehat{\alpha}_{\text\tiny{{LC}}}$ para $L=3$, $n=25$ y $\alpha=-5,-8$.}
+	\caption{\label{InflL3n25:-5y-8}\small FIES para $\widehat{\alpha}_{\text{\tiny{MV}}}$, $\widehat{\alpha}_{\Gamma}$, $\widehat{\alpha}_{\text{\tiny{LN}}}$, $\widehat{\alpha}_{\text\tiny{{LC}}}$ para $L=3$, $n=25$ y $\alpha=-5,-8$.}
 \end{figure}
 
 \begin{figure}[htb]
 	\subfigure[\label{InflL8alfa-1.5n25}$\widehat{\alpha}=-1.5$]{\includegraphics[width=.50\linewidth]{../../Figures/Tesis/Capitulo6/CurvaInfluenciaAlfa_1punto5L8n25.pdf}}
 	\subfigure[\label{InflL8alfa-3n25}$\widehat{\alpha}=-3$]{\includegraphics[width=.50\linewidth]{../../Figures/Tesis/Capitulo6/CurvaInfluenciaAlfa_3L8n25.pdf}}
-	\caption{\label{InflL8n25}\small FIES para $\widehat{\alpha}_{\text{\tiny{MV}}}$, $\widehat{\alpha}_{\Gamma}$, $\widehat{\alpha}_{\text{\tiny{LN}}}$, $\widehat{\alpha}_{\text\tiny{{LC}}}$ para $L=8$, $n=25$ y $\alpha=-1.5,-3$.}
+	\caption{\label{InflL8n25:-1.5y-3}\small FIES para $\widehat{\alpha}_{\text{\tiny{MV}}}$, $\widehat{\alpha}_{\Gamma}$, $\widehat{\alpha}_{\text{\tiny{LN}}}$, $\widehat{\alpha}_{\text\tiny{{LC}}}$ para $L=8$, $n=25$ y $\alpha=-1.5,-3$.}
 \end{figure}
 
 \begin{figure}[htb]
 	\subfigure[\label{InflL8alfa-5n25}$\widehat{\alpha}=-5$]{\includegraphics[width=.50\linewidth]{../../Figures/Tesis/Capitulo6/CurvaInfluenciaAlfa_5L8n25.pdf}}
 	\subfigure[\label{InflL8alfa-8n25}$\widehat{\alpha}=-8$]{\includegraphics[width=.50\linewidth]{../../Figures/Tesis/Capitulo6/CurvaInfluenciaAlfa_8L8n25.pdf}}
-	\caption{\label{InflL8n25}\small FIES para $\widehat{\alpha}_{\text{\tiny{MV}}}$, $\widehat{\alpha}_{\Gamma}$, $\widehat{\alpha}_{\text{\tiny{LN}}}$, $\widehat{\alpha}_{\text{\tiny{LC}}}$ para $L=8$, $n=25$ y $\alpha=-5,-8$.}
+	\caption{\label{InflL8n25:-5y-8}\small FIES para $\widehat{\alpha}_{\text{\tiny{MV}}}$, $\widehat{\alpha}_{\Gamma}$, $\widehat{\alpha}_{\text{\tiny{LN}}}$, $\widehat{\alpha}_{\text{\tiny{LC}}}$ para $L=8$, $n=25$ y $\alpha=-5,-8$.}
 \end{figure}
 
 Se puede observar que $\widehat{\alpha}_{\text{\tiny{MV}}}$, $\widehat{\alpha}_{\text{\tiny{LC}}}$ y, por otro lado, $\widehat{\alpha}_{\Gamma}$ y $\widehat{\alpha}_{\text{\tiny{LN}}}$ tienen un comportamiento similar para $\alpha=-3, -5, -8$. Para zonas extremandamente texturadas $\widehat{\alpha}_{\text{LN}}$ es el que mejor performance tiene, mientras que para el resto de las texturas tanto $\widehat{\alpha}_{\Gamma}$ como $\widehat{\alpha}_{\text{\tiny{LN}}}$ tienen una mejor performance respecto de los otros estimadores, para valores de $z$ menores que el último cuantil. Mas aún, $\widehat{\alpha}_{\text{\tiny{MV}}}$ no converge para zonas moderadamente heterogéneas y homogéneas, mientras que $\widehat{\alpha}_{\text{\tiny{LC}}}$ no converge para zonas homogéneas. Todos los estimadores se comportan de manera similar para valores grandes de $z$. Este comportamiento muestra la sensibilidad y la pérdida de robustez de $\widehat{\alpha}_{\text{\tiny{MV}}}$ y $\widehat{\alpha}_{\text{\tiny{LC}}}$ frente a los otros estimadores. 
