--- a/Source/CorreccionTesis/capitulo2.tex
+++ b/Source/CorreccionTesis/capitulo2.tex
@@ -6,11 +6,20 @@
 
 \chapter{Introducción}
 
-La teledetección constituye una herramienta de gran utilidad para el desarrollo de sistemas de prevención, seguimiento y evaluación de superficie terrestre. Se define como  la  técnica  que  permite  adquirir  imágenes  de  la  superficie terrestre desde sensores instalados en plataformas espaciales o aereotransportadas. Este proceso se basa en la detección y medición de radiación electromagnética emitida ya sea de manera natural o a partir de una fuente artificial emisora. La energía es captada por sensores y permite identificar objetivos por sus propiedades físicas y sustancias que lo componen. Estos sensores emiten radiación electromagnética comprendida en varias zonas del espectro electromagnético. La parte del espectro electromagnético usada en teledetección se extiende aproximadamente desde $10^{-1} \mu m$ hasta $10^{9} \mu m$, donde $\mu m$ se llama al  micrómetro que es la millonésima parte del metro.
+La teledetección constituye una herramienta de gran utilidad para el desarrollo de sistemas de prevención, seguimiento y evaluación de superficie terrestre. Se define como  las técnicas que permiten adquirir imágenes (y otras formas de organizar datos: señales, series de tiempo, etc.) de la  superficie terrestre desde sensores instalados en plataformas espaciales o aereotransportadas. 
+Este proceso se basa en la detección y medición de radiación electromagnética emitida ya sea de manera natural o a partir de una fuente artificial emisora.
+La energía es captada por sensores y permite identificar objetos por sus propiedades físicas y sustancias que los componen. 
+Estos sensores captan la radiación comprendida en varias zonas del espectro electromagnético. 
 
-Esta técnica de teledetección comprende dos procesos. Uno de estos procesos es la adquisición de información de la superficie terrestre captando la radiación electromagnética emitida o reflejada por ésta. El otro es el almacenamiento de la información obtenida para su posterior procesamiento en virtud de interpretarla y utilizarla. 
+%%% ACF Usá la librería siunitx para tipear unidades
+La parte del espectro electromagnético usada en teledetección se extiende aproximadamente desde $10^{-1} \mu m$ hasta $10^{9} \mu m$, donde $\mu m$ denota el micrómetro, la millonésima parte del metro.
 
-El sensor remoto recibe la radiación que proviene de los objetos situados sobre la superficie terrestre. En función de la forma en la que se refleje esta radiación podremos clasificar los distintos tipos de terrenos.
+Esta técnica de teledetección comprende dos procesos. 
+Uno de estos procesos es la adquisición de información de la superficie terrestre captando la radiación electromagnética emitida o reflejada por ésta. 
+El otro es el almacenamiento de la información obtenida para su posterior procesamiento en virtud de interpretarla y utilizarla. 
+
+El sensor remoto recibe la radiación que proviene de los objetos situados sobre la superficie terrestre. 
+En función de la forma en la que se refleje esta radiación podremos clasificar los distintos tipos de terrenos.
 
 %\begin{figure}[hbt]
 %	\centering    
@@ -18,7 +27,16 @@ El sensor remoto recibe la radiación que proviene de los objetos situados sobre
 %	\caption{\label{Backscatter}Radiación reflejada por distintos objetos en la superficie terrestre.}
 %\end{figure} 
 
-Los sistemas de teledetección se pueden dividir principalmente en dos grupos: los teledetectores activos y los pasivos. Los sensores activos tienen su propia fuente de energía para iluminar los objetos que observan. Ellos emiten radiación en la dirección del objetivo a ser investigado, detecta y mide la radiación que es reflejada o retrodispersada desde el objetivo. Los sensores pasivos, por otra parte, detectan la radiación electromagnética emitida o reflejada de fuentes naturales, no necesitan una fuente de energía externa. La luz del sol reflejada es la fuente más común de la radiación medida por los sensores pasivos. Un ejemplo de sensor pasivo es el espectrómetro óptico o espectroscopio, que es un instrumento que sirve para medir las propiedades de la luz en una determinada porción del espectro electromagnético. El Radar es un ejemplo de sensor activo.
+Los sistemas de teledetección se pueden dividir principalmente en dos grupos: los teledetectores activos y los pasivos. 
+
+Los sensores activos tienen su propia fuente de energía para iluminar los objetos que observan. 
+Ellos emiten radiación en la dirección del objetivo a ser investigado, detectan y miden la radiación que es reflejada o retrodispersada desde el objetivo. 
+El radar es un ejemplo de sensor activo.
+
+Los sensores pasivos, por otra parte, detectan la radiación electromagnética emitida o reflejada de fuentes naturales, no necesitan una fuente de energía externa. 
+La luz del sol reflejada es la fuente más común de la radiación medida por los sensores pasivos. 
+Un ejemplo de sensor pasivo es el espectrómetro óptico o espectroscopio, que es un instrumento que sirve para medir las propiedades de la luz en una determinada porción del espectro electromagnético. 
+
 
 %Entre las ventajas que ofrece la Teledetección, destaca su alta periodicidad temporal, por lo que se facilita el seguimiento de aquellas variables ambientales sometidas a una intensa dinámica. Además, gracias a la teledetección ambiental se brinda la posibilidad de obtener información de grandes superficies de territorio en poco tiempo, de tal manera que extensas regiones pueden ser muestreadas en su totalidad en pocos días.
 
