--- a/Source/CorreccionTesis/formulario_E_Julia.tex
+++ b/Source/CorreccionTesis/formulario_E_Julia.tex
@@ -111,9 +111,11 @@ Firma del autor de la tesis:
 \emph{(Especificar cuales son los aportes originales o innovadores conseguidos en la realización de esta tesis. Indicar donde se encuentran. Máximo una carilla)}
 
 \vspace{0.5cm}
-En el capítulo~\ref{modeloG0} de esta tesis, subsección~\ref{ResultadosTeoricosGI0} se presentan nuevos resultados teóricos de la familia de distribuciones $\mathcal{G}_I^0$ que modelan datos provenientes de radares de apertura sintética (SAR). Se prueba que esta distribución tiene colas pesadas y la convergencia uniforme de la función de densidad $f_{\mathcal{G}_I^0}$ sobre intervalos compactos $[z_1,z_2]\subset(0,+\infty)$, cuando el parámetro de textura se acerca a $0$ y a $-\infty$.
+En el capítulo~\ref{modeloG0} de esta tesis, subsección~\ref{ResultadosTeoricosGI0} se presentan nuevos resultados teóricos de la familia de distribuciones $\mathcal{G}_I^0$ que modelan datos de imágenes provenientes de radares de apertura sintética (SAR). Se prueba que esta distribución tiene colas pesadas y la convergencia uniforme de la función de densidad $f_{\mathcal{G}_I^0}$ sobre intervalos compactos $[z_1,z_2]\subset(0,+\infty)$, cuando el parámetro de textura se acerca a $0$ y a $-\infty$.
 
-En el capítulo~\ref{ResultadosEmpiricos} se propone un nuevo estimador para el parámetro de textura de la distribución $\mathcal{G}_I^0$. Este estimador es el valor del argumento que minimiza una distancia estocástica entre el modelo teórico y una estimación no paramétrica de la función de densidad subyacente con núcleos asimétricos. El aporte de la propuesta es la combinación de utilizar funciones de densidad en vez de distribución en el estimador de mínima distancia, junto con distancias estocásticas y la estimación por núcleos asimétricos de la función de densidad subyacente. Se analiza el desempeño del estimador propuesto especialmente para el caso de muestras de pequeño tamaño ya que es de interés en el procesamiento de imágenes SAR. Este análisis se realizó para diferentes combinaciones de valores de los parámetros, tamaños de muestra y niveles de procesamiento comparando su performance con los estimadores clásicos que existen en la literatura. Se estudió también la performance del estimador frente a diferentes escenarios de contaminación.
+En el capítulo~\ref{ResultadosEmpiricos} se propone un nuevo estimador para el parámetro de textura de la distribución $\mathcal{G}_I^0$. Este estimador es el valor del argumento que minimiza una distancia estocástica entre el modelo teórico y una estimación no paramétrica con núcleos asimétricos de la función de densidad subyacente. 
+%%% ACF Acá separar las contribuciones con \itemize
+El aporte de la propuesta es la combinación de utilizar funciones de densidad en vez de distribución en el estimador de mínima distancia, junto con distancias estocásticas y la estimación por núcleos asimétricos de la función de densidad subyacente. Se analiza el desempeño del estimador propuesto especialmente para el caso de muestras de pequeño tamaño ya que es de interés en el procesamiento de imágenes SAR. Este análisis se realizó para diferentes combinaciones de valores de los parámetros, tamaños de muestra y niveles de procesamiento comparando su performance con los estimadores clásicos que existen en la literatura. Se estudió también la performance del estimador frente a diferentes escenarios de contaminación.
 
 En el capítulo~\ref{modeloG0} subsección~\ref{AplicacionImagenReal} se aplica el estimador propuesto en esta tesis a una imagen real.
 
