--- a/Source/CorreccionTesis/gracias.tex
+++ b/Source/CorreccionTesis/gracias.tex
@@ -9,13 +9,13 @@
 
 \chapter*{Agradecimientos}
 
-Quiero agradecer especialmente a mi director Dr. Alejandro Frery Orgambide por su apoyo permanente, su estímulo y su presencia constante a lo largo de estos años. 
+Quiero agradecer especialmente a mi director Dr.\ Alejandro C.\ Frery por su apoyo permanente, su estímulo y su presencia constante a lo largo de estos años. 
 
 A mis amigos Fer y Lía, Pablo y Lore por estar en mi vida y acompañarme en este camino.
 
 A mi amiga Lore por esas caminatas de los viernes que tanto bien me hicieron y me hacen al alma.
 
-A mis amigos Nino y Cristina por compartir la vida y especialmente por estar presente en cada momento de la realización de esta tesis.
+A mis amigos Nino y Cristina por compartir la vida y especialmente por estar presentes en cada momento de la realización de esta tesis.
 
 A mis amigos Michel y Alejandra que desde el país vecino siempre estuvieron a mi lado.
 
@@ -29,4 +29,4 @@ A mi hermana querida por estar siempre.
 
 A mis padres que hubiesen estado muy felices por este logro en mi vida.
 
-Finalmente quiero agradecer profundamente a mi marido Tico, por su presencia constante, su apoyo incondicional, su tiempo dedicado, su amor, por confiar y creer en mi y por... tanto por decir.
+Finalmente quiero agradecer profundamente a mi marido Tico, por su presencia constante, su apoyo incondicional, su tiempo dedicado, su amor, por confiar y creer en mí y por\dots\ tanto por decir.
