--- a/Source/CorreccionTesis/capitulo1.tex
+++ b/Source/CorreccionTesis/capitulo1.tex
@@ -1,4 +1,3 @@
-
 \chapter{Resumen}
 %%% ACF Acá hablás de G_0 y de G_I^0. Sugiero que unifiques todo a G^0
 
@@ -10,4 +9,4 @@ El uso de modelos estadísticos para modelar estos datos es una herramienta fund
 La familia de distribuciones $\mathcal{G}^0$ tiene soporte positivo y se indexa por tres parámetros: textura, escala y número de looks. % La estimación de la textura de la imagen es de suma importancia, ya que es capaz de caracterizar el tipo de objetivo bajo análisis.
 El más relevante para la interpretación de estos datos es el parámetro de textura, por lo que se han propuesto muchas estrategias para estimarlo, entre ellas, el método de Máxima Verosimilitud, Momentos, métodos robustos y Logcumulantes.
 
-Esta tesis propone y analiza una nueva estrategia para la estimación del parámetro de textura del modelo $\mathcal G_0$ para datos de intensidad, por medio de la minimización de distancias estocásticas entre la función de densidad teórica $\mathcal{G}_I^0$ y una estimación no paramétrica de la función de densidad subyacente que proviene de los datos observados. La propuesta es estimar dicha función de densidad utilizando núcleos asimétricos ya que la distribución tiene soporte positivo. Se comparará el desempeño de estos estimadores, en términos de sesgo, error cuadrático medio, con los obtenidos por el métodos de Momentos, Máxima Verosimilitud y Logcumulantes. Además se estudiará el comportamiento de estos estimadores y sus propiedades, como así también la robustez de los mismos bajo diferentes escenarios de contaminación.
+Esta tesis propone y analiza una nueva estrategia para la estimación del parámetro de textura del modelo $\mathcal G^0$ para datos de intensidad, por medio de la minimización de distancias estocásticas entre la función de densidad teórica y una estimación no paramétrica de la función de densidad subyacente que proviene de los datos observados. La propuesta es estimar dicha función de densidad utilizando núcleos asimétricos ya que la distribución tiene soporte positivo. Se comparará el desempeño de estos estimadores, en términos de sesgo, error cuadrático medio, con los obtenidos por el métodos de Momentos, Máxima Verosimilitud y Logcumulantes. Además se estudiará el comportamiento de estos estimadores y sus propiedades, como así también la robustez de los mismos bajo diferentes escenarios de contaminación.
