--- a/Source/CorreccionTesis/capitulo2.tex
+++ b/Source/CorreccionTesis/capitulo2.tex
@@ -12,7 +12,7 @@ La energía es captada por sensores y permite identificar objetos por sus propie
 Estos sensores captan la radiación comprendida en varias zonas del espectro electromagnético. 
 
 %%% ACF Usá la librería siunitx para tipear unidades
-La parte del espectro electromagnético usada en teledetección se extiende aproximadamente desde $10^{-1} \mu m$ hasta $10^{9} \mu m$, donde $\mu m$ denota el micrómetro, la millonésima parte del metro.
+La parte del espectro electromagnético usada en teledetección se extiende aproximadamente desde $\SI{e-1}{\micro\meter}$ hasta $\SI{e9}{\micro\meter}$.
 
 Esta técnica de teledetección comprende dos procesos. 
 Uno de estos procesos es la adquisición de información de la superficie terrestre captando la radiación electromagnética emitida o reflejada por ésta. 
@@ -99,4 +99,5 @@ Esta tesis está organizada de la siguiente manera:
 	\item En el capítlo~\ref{Conclusiones} se presentan las conclusiones finales de este trabajo.
 	
 \end{itemize}
+
 
