--- a/Source/CorreccionTesis/formulario_E_Julia.tex
+++ b/Source/CorreccionTesis/formulario_E_Julia.tex
@@ -1,63 +1,62 @@
-
 \noindent Niveles de acceso al documento autorizados por el autor.
 
 El autor de la tesis puede elegir entre las siguientes posibilidades para autorizar  a la UNGS a difundir el contenido de la tesis: \underline{a}
 %\renewcommand{\labelenumi}{\alph{enumi})} \textit{
 \begin{enumerate}[a)]
- 	\item \underline{Liberar el contenido de la tesis para acceso público.}
- 	\item Liberar el contenido de la tesis solamente a la comunidad universitaria de la UNGS.
- 	\item Retener el contenido de la tesis por motivos de patentes, publicación y/o derechos de autor por un lapso de cinco años. 
- \end{enumerate}
+	\item \underline{Liberar el contenido de la tesis para acceso público.}
+	\item Liberar el contenido de la tesis solamente a la comunidad universitaria de la UNGS.
+	\item Retener el contenido de la tesis por motivos de patentes, publicación y/o derechos de autor por un lapso de cinco años. 
+\end{enumerate}
 
 \begin{enumerate}
 	\item Título completo del trabajo de Tesis: Estimación de Parámetros en Imágenes SAR Monopolarizadas Usando Distancias Estocásticas y Núcleos Asimétricos.
-
+	
 	\item Presentado por (Apellido/s y Nombres completos del autor): Cassetti, Julia Analía.
-
+	
 	\item E-mail del autor: julia.cassetti@gmail.com.
-
+	
 	\item Estudiante del Posgrado (consignar el nombre completo del Posgrado): Doctorado en Ciencia y Tecnología.
-
+	
 	\item Institución o Instituciones que dictaron el Posgrado (consignar los nombres
-desarrollados y completos): Universidad Nacional de General Sarmiento.
-
+	desarrollados y completos): Universidad Nacional de General Sarmiento.
+	
 	\item Para recibir el título de (consignar completo):
-
+	
 	\begin{enumerate}%[leftmargin=25.00003pt,labelsep=5pt]
-	\item Grado académico que se obtiene: Doctor.
-	\item Nombre del grado académico: Doctor en Ciencia y Tecnología.
+		\item Grado académico que se obtiene: Doctor.
+		\item Nombre del grado académico: Doctor en Ciencia y Tecnología.
 	\end{enumerate}
-
+	
 	\item Fecha de la defensa: día / mes / año %(andá a buscarla al ángulo)
-
+	
 	\item Director de la Tesis (Apellidos y Nombres): Frery Orgambide, Alejandro César.
-
+	
 	\item Tutor de la Tesis (Apellidos y Nombres): Borgna, Juan Pablo.
-
+	
 	\item Colaboradores con el trabajo de Tesis: 
-
+	
 	\item Descripción física del trabajo de Tesis (cantidad total de páginas, imágenes, planos, videos, archivos digitales, etc.):
 	\begin{itemize}%[leftmargin=25.00003pt,labelsep=5pt]
 		\item 154 páginas;
 		\item 13 tablas;
 		\item 61 figuras.
 	\end{itemize}
-
+	
 	\item Alcance geográfico y/o temporal de la Tesis: El alcance geográfico de la tesis es internacional.
-
+	
 	\item Temas tratados en la Tesis (palabras claves): Estimación de parámetros, Sensores Remotos, Imágenes SAR, Núcleos asimétricos, Distancias estocásticas, Estimadores de mínima distancia, Speckle.
-
+	
 	\item Resumen en español (hasta 1000 caracteres): 
 	
 	Resumen
 	
 	El modelo $\mathcal{G}^0$ es una buena elección para explicar las características estadísticas de datos que provienen de imágenes de radar de apertura sintética (SAR), porque bajo este modelo se pueden caracterizar regiones con diferentes grado de textura a través de sus parámetros.  Esta tesis propone una nueva estrategia para la estimación del parámetro de textura del modelo $\mathcal G_0$ para datos de intensidad, por medio de la minimización de distancias estocásticas entre la función de densidad teórica, y una estimación no paramétrica de la función de densidad subyacente que proviene de los datos observados utilizando núcleos asimétricos. Se comparará el desempeño de estos estimadores, en términos de sesgo y error cuadrático medio, con los obtenidos por el Método de Momentos, Máxima Verosimilitud y Logcumulantes. Además se estudiarán propiedades de convergencia, como así también la robustez de los mismos bajo contaminación. 
-
-
+	
+	
 	\item Resumen en portugués (hasta 1000 caracteres):
 	
 	Resumo
-
+	
 	O modelo $ \mathcal {G}^0$ é uma boa opção para explicar as características estatísticas dos dados provenientes de imagens de radar de abertura sintética (SAR), porque nesse modelo regiões com diferentes graus de textura podem ser caracterizadas através de seus parâmetros. Esta tese propõe uma nova estratégia para a estimativa do parâmetro de textura do modelo $\mathcal{G}_0$ para dados de intensidade, através da minimização de distâncias estocásticas entre a função de densidade teórica e uma estimativa não paramétrica da função de densidade. subjacente que vem dos dados observados usando núcleos assimétricos. O desempenho desses estimadores será comparado, em termos de viés e erro médio quadrático, aos obtidos pelo Método dos Momentos, Máxima Verossimilhança e Logcumulantes. Além disso, serão estudadas propriedades de convergência, bem como sua robustez sob contaminação.
 	
 	\item Resumen en inglés (hasta 1000 caracteres):
@@ -65,21 +64,21 @@ desarrollados y completos): Universidad Nacional de General Sarmiento.
 	Abstract
 	
 	The $\mathcal{G}^0$ model is a good choice to explain the statistical characteristics of data that come from synthetic aperture radar (SAR) images, because under this model, areas with different degrees of texture can be characterized through their parameters. This thesis proposes a new strategy for the estimation of the texture parameter of the $\mathcal G_0 $ model for intensity data, through the minimization of stochastic distances between the theoretical density function, and a non-parametric estimation of the underlying density function that comes from the observed data using asymmetric kernels. The performance of these estimators will be compared, in terms of bias and mean square error, with those obtained by the Method of Moments, Maximum Likelihood and Logcumulantes. In addition, convergence properties will be studied, as well as their robustness under contamination.
-
-\item Aprobado por (Apellidos y Nombres del Jurado):
-
-\bigskip\bigskip\bigskip\bigskip
-
-Firma y aclaración de la firma del Presidente del Jurado:				
-
-\bigskip\bigskip\bigskip\bigskip
-
-Firma del autor de la tesis:
-
+	
+	\item Aprobado por (Apellidos y Nombres del Jurado):
+	
+	\bigskip\bigskip\bigskip\bigskip
+	
+	Firma y aclaración de la firma del Presidente del Jurado:				
+	
+	\bigskip\bigskip\bigskip\bigskip
+	
+	Firma del autor de la tesis:
+	
 \end{enumerate}
 
 \newpage
-	
+
 \textbf{Publicaciones:}
 \begin{itemize}
 	\item En revistas con referato
@@ -97,14 +96,14 @@ Firma del autor de la tesis:
 \end{itemize}
 
 \textbf{Trabajos presentados en congresos:}
-		\begin{itemize}
-			\item  	IV JIAAIS Interdisciplinary Workshop on Advanced Signal and Image Analysis -  \emph{Gamma and Lognormal Kernels with Stochastic Distance for Texture Parameter Estimation under the Intensity Multilook $\mathcal{G}_I^0$ Law} - J. Cassetti, A. Frey - Maceió  - Brasil - 2017 - Poster -  Expositor.
-			\item  IEEE International Geoscience and Remote Sensing Symposium IGARSS - \emph{Texture Parameter Estimation in Monopolarized SAR Imagery, for the Single Look Case} - D. Chan, J. Cassetti, A. Frery  - Beijing, China 2016 - Presentación oral.
-			\item Segundas Jornadas Interdisciplinarias de Análisis Avanzado de Imágenes y Señales  - \emph{Parameter Estimation in SAR Imagery using Stochastic Distances and Asymmetric Kernels} - J. Cassetti, A. Frery - Universidad Nacional de General Sarmiento - Argentina - octubre 2015 - Presentación oral - Expositor.
-			\item Segundas Jornadas Interdisciplinarias de Análisis Avanzado de Imágenes y Señales - \emph{Comparación de estimadores paramétricos para la distribución $\mathcal{G}_I^0$ para el caso $L = 1$} -  D. Chan; J. Cassetti y A. Frery - Universidad Nacional de General Sarmiento - Argentina - 2015  - Presentación oral.
-			\item IV Workshop en Ecuaciones de la Física Matemática  - \emph{Estimación del parámetro de textura de la distribución $\mathcal{G}_I^0$} - J. Cassetti, A. Frery, Universidad Nacional de General Sarmiento - Los Polvorines - Argentina - 2015. Presentación oral - Expositor.
-			\item XVIII Conference on Nonequilibrium Statistical Mechanics and Nonlinear Physics - Medyfinol- \emph{Texture Analysis in SAR Imagery using the $\mathcal{G}_I^0$ Distribution}  - J. Gambini,  M. Lucini, J. Cassetti, A. Frery - Maceió  - Brasil - Poster - 2014.
-		\end{itemize}
+\begin{itemize}
+	\item  	IV JIAAIS Interdisciplinary Workshop on Advanced Signal and Image Analysis -  \emph{Gamma and Lognormal Kernels with Stochastic Distance for Texture Parameter Estimation under the Intensity Multilook $\mathcal{G}_I^0$ Law} - J. Cassetti, A. Frey - Maceió  - Brasil - 2017 - Poster -  Expositor.
+	\item  IEEE International Geoscience and Remote Sensing Symposium IGARSS - \emph{Texture Parameter Estimation in Monopolarized SAR Imagery, for the Single Look Case} - D. Chan, J. Cassetti, A. Frery  - Beijing, China 2016 - Presentación oral.
+	\item Segundas Jornadas Interdisciplinarias de Análisis Avanzado de Imágenes y Señales  - \emph{Parameter Estimation in SAR Imagery using Stochastic Distances and Asymmetric Kernels} - J. Cassetti, A. Frery - Universidad Nacional de General Sarmiento - Argentina - octubre 2015 - Presentación oral - Expositor.
+	\item Segundas Jornadas Interdisciplinarias de Análisis Avanzado de Imágenes y Señales - \emph{Comparación de estimadores paramétricos para la distribución $\mathcal{G}_I^0$ para el caso $L = 1$} -  D. Chan; J. Cassetti y A. Frery - Universidad Nacional de General Sarmiento - Argentina - 2015  - Presentación oral.
+	\item IV Workshop en Ecuaciones de la Física Matemática  - \emph{Estimación del parámetro de textura de la distribución $\mathcal{G}_I^0$} - J. Cassetti, A. Frery, Universidad Nacional de General Sarmiento - Los Polvorines - Argentina - 2015. Presentación oral - Expositor.
+	\item XVIII Conference on Nonequilibrium Statistical Mechanics and Nonlinear Physics - Medyfinol- \emph{Texture Analysis in SAR Imagery using the $\mathcal{G}_I^0$ Distribution}  - J. Gambini,  M. Lucini, J. Cassetti, A. Frery - Maceió  - Brasil - Poster - 2014.
+\end{itemize}
 \newpage
 
 \textbf{Aportes Originales}:\\
@@ -115,8 +114,17 @@ En el capítulo~\ref{modeloG0} de esta tesis, subsección~\ref{ResultadosTeorico
 
 En el capítulo~\ref{ResultadosEmpiricos} se propone un nuevo estimador para el parámetro de textura de la distribución $\mathcal{G}_I^0$. Este estimador es el valor del argumento que minimiza una distancia estocástica entre el modelo teórico y una estimación no paramétrica con núcleos asimétricos de la función de densidad subyacente. 
 %%% ACF Acá separar las contribuciones con \itemize
-El aporte de la propuesta es la combinación de utilizar funciones de densidad en vez de distribución en el estimador de mínima distancia, junto con distancias estocásticas y la estimación por núcleos asimétricos de la función de densidad subyacente. Se analiza el desempeño del estimador propuesto especialmente para el caso de muestras de pequeño tamaño ya que es de interés en el procesamiento de imágenes SAR. Este análisis se realizó para diferentes combinaciones de valores de los parámetros, tamaños de muestra y niveles de procesamiento comparando su performance con los estimadores clásicos que existen en la literatura. Se estudió también la performance del estimador frente a diferentes escenarios de contaminación.
+El aporte de la propuesta es:
+\begin{itemize}
+	\item utilizar funciones de densidad en vez de distribución en el estimador de mínima distancia,
+	\item utilizar distancias estocásticas y núcleos asimétricos para la función de densidad subyacente
+\end{itemize} 
 
+ Se analiza el desempeño del estimador propuesto especialmente para el caso de muestras de pequeño tamaño ya que es de interés en el procesamiento de imágenes SAR. Este análisis se realizó para diferentes combinaciones de valores de los parámetros, tamaños de muestra y niveles de procesamiento comparando su performance con los estimadores clásicos que existen en la literatura. Se estudió también la performance del estimador frente a diferentes escenarios de contaminación.
+
+En el capítulo~\ref{modeloG0} subsección~\ref{AplicacionImagenReal} se aplica el estimador propuesto en esta tesis a una imagen real.
+
+En el capítulo~\ref{ResultadosTeoricos} se prueba que el estimador propuesto es fuertemente consistente del parámetro de textura.
 En el capítulo~\ref{modeloG0} subsección~\ref{AplicacionImagenReal} se aplica el estimador propuesto en esta tesis a una imagen real.
 
 En el capítulo~\ref{ResultadosTeoricos} se prueba que el estimador propuesto es fuertemente consistente del parámetro de textura.
