Revisar de nuevo

--- a/Source/CorreccionTesis/capitulo2.tex
+++ b/Source/CorreccionTesis/capitulo2.tex
@@ -40,11 +40,17 @@ Un ejemplo de sensor pasivo es el espectrómetro óptico o espectroscopio, que e
 
 %Entre las ventajas que ofrece la Teledetección, destaca su alta periodicidad temporal, por lo que se facilita el seguimiento de aquellas variables ambientales sometidas a una intensa dinámica. Además, gracias a la teledetección ambiental se brinda la posibilidad de obtener información de grandes superficies de territorio en poco tiempo, de tal manera que extensas regiones pueden ser muestreadas en su totalidad en pocos días.
 
-Los sistemas de Radar (\textit{radio detection and ranging}: detección y medición de distancias por radio) son instrumentos que, a través de ondas electromagnéticas, detectan un objeto e indican su distancia y posición. Estos instrumentos miden la respuesta del terreno a la radiación electromagnética emitida en forma de pulsos, el valor de esta respuesta es almacenada para su posterior procesamiento y se utiliza para formar una imagen de la zona de interés. Un Radar de Apertura Sintética (\textit{synthetic aperture radar}: SAR) es un tipo de sistema que consiste en procesar, mediante algoritmos, la información capturada por la antena del radar. Mediante este proceso se consigue el mismo rendimiento que se obtendría si se utilizara una antena mucho más grande que la que tiene en realidad, por eso se llaman de apertura sintética. 
+Los sistemas de Radar (\textit{radio detection and ranging}: detección y medición de distancias por radio) son instrumentos que, a través de ondas electromagnéticas, detectan un objeto e indican su distancia y posición. Estos instrumentos miden la respuesta del terreno a la radiación electromagnética emitida en forma de pulsos, el valor de esta respuesta es almacenada para su posterior procesamiento y se utiliza para formar una imagen de la zona de interés. Un Radar de Apertura Sintética (\textit{Synthetic Aperture Radar} -- SAR) es un tipo de sistema que consiste en procesar, mediante algoritmos, la información capturada por la antena del radar. Mediante este proceso se consigue el mismo rendimiento que se obtendría si se utilizara una antena mucho más grande que la que tiene en realidad, por eso se llaman de apertura sintética. 
 
-Los dispositivos de captura de imágenes que emplean iluminación coherente, como sucede en las imágenes de ultrasonido B, laser y de radar de apertura sintética – SAR entre otros, introducen un ruido que es propio del sistema de captura de la imagen. Este ruido, llamado speckle, no es gaussiano ni aditivo y, por lo tanto, diferente al ruido que se observa en imágenes ópticas. Existen diferentes técnicas para disminuir la presencia de este ruido, pero como contrapartida la imagen pierde resolución.
+Los dispositivos de captura de imágenes que emplean iluminación coherente, como sucede en las imágenes de ultrasonido B, laser y SAR, introducen un ruido que es propio del sistema de captura de la imagen. 
+Este ruido, llamado \textit{speckle}, no es gaussiano ni aditivo y, por lo tanto, diferente al ruido que se observa en imágenes ópticas. 
+Existen diferentes técnicas para disminuir la presencia de este ruido, pero como contrapartida la imagen pierde resolución.
 
-La utilización de modelos estadísticos ha sido una herramienta fundamental para analizar e interpretar datos con ruido speckle. Se han presentado varias distribuciones para modelar este tipo de imágenes. Las distribuciones Lognormal y Weibull fueron introducidas en \citet{oliverquegan98} para caracterizar datos de alta resolución, mientras que en \citet{Oliver1993} se estudiaron las distribuciones \textit{K} y Weibull. En \citet{Tison2004} los autores presentaron la distribución de Fisher para modelar varios tipos de áreas. \citet{Li2011} propusieron una distribución Gamma generalizada para modelar imágenes SAR que tiene las distribuciones Weibull, \textit{K} y Fisher, entre otras, como casos particulares. Cabe señalar que la distribución $\mathcal{G}^0$ está relacionada con la distribución de Fisher, como se muestra en \citet{MejailJacoboFreryBustos:IJRS}.
+La utilización de modelos estadísticos ha sido una herramienta fundamental para analizar e interpretar datos con ruido speckle. 
+Se han presentado varias distribuciones para modelar este tipo de imágenes. Las distribuciones Lognormal y Weibull fueron introducidas por \citet{oliverquegan98} para caracterizar datos de alta resolución, mientras que \citet{Oliver1993} estudió las distribuciones \textit{K} y Weibull. 
+\citet{Tison2004} presentaron la distribución de Fisher para modelar varios tipos de áreas. 
+\citet{Li2011} propusieron una distribución Gamma generalizada para modelar imágenes SAR; esa distribución tiene las leyes Weibull, \textit{K} y Fisher, entre otras, como casos particulares. 
+Cabe señalar que la distribución $\mathcal{G}^0$ está relacionada con la distribución de Fisher, como muestran \citet{MejailJacoboFreryBustos:IJRS}.
 
 En \citet{oliverquegan98} proponen modelar datos provenientes de un sistema de iluminación por radiación coherente, como son los datos SAR, con un modelo multiplicativo que considera que el valor observado en cada celda de la imagen es una variable aleatoria $Z$ que resulta del producto de dos variables aleatorias independientes: una correspondiente a la retrodispersión $X$ (que es lo que observaríamos sin la presencia del ruido speckle) y la otra correspondiente al ruido speckle $Y$ (que es inherente a todo sistema de captura de imágenes con iluminación coherente). 
 
