--- a/Source/CorreccionTesis/gracias.tex
+++ b/Source/CorreccionTesis/gracias.tex
@@ -29,4 +29,4 @@ A mi hermana querida por estar siempre.
 
 A mis padres que hubiesen estado muy felices por este logro en mi vida.
 
-Finalmente quiero agradecer profundamente a mi marido Tico, por su presencia constante, su apoyo incondicional, su tiempo dedicado, su amor, por confiar y creer en mí y por\dots tanto por decir.
+Finalmente quiero agradecer profundamente a mi marido Tico, por su presencia constante, su apoyo incondicional, su tiempo dedicado, su amor, por confiar y creer en mí y por\dots\ tanto por decir.
